--- a/AquariumArduinoClient/AquariumArduinoClient.csproj
+++ b/AquariumArduinoClient/AquariumArduinoClient.csproj
@@ -103,6 +103,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\PHLog.cs" />
     <Compile Include="Models\PHSettings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
