--- a/AquariumArduinoClient/AquariumArduinoClient.csproj
+++ b/AquariumArduinoClient/AquariumArduinoClient.csproj
@@ -107,6 +107,12 @@
     <Compile Include="Models\WaterSensorMessage.cs" />
     <Compile Include="Models\WaterSensorData.cs" />
     <Compile Include="Models\PHSettings.cs" />
+    <Compile Include="NewTankDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewTankDialog.Designer.cs">
+      <DependentUpon>NewTankDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\ControlHelpers.cs" />
@@ -116,6 +122,9 @@
     <Compile Include="Utilities\SystemUtils.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewTankDialog.resx">
+      <DependentUpon>NewTankDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
