website working good enough

--- a/AquariumArduinoWeb/AquariumArduinoWeb.csproj
+++ b/AquariumArduinoWeb/AquariumArduinoWeb.csproj
@@ -173,6 +173,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ROTankController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -181,11 +182,13 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\SelectTankModel.cs" />
     <Compile Include="Models\WaterSensorModel.cs" />
     <Compile Include="Models\TDSModel.cs" />
     <Compile Include="Models\PHModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Utils\DataHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -260,6 +263,9 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\_SensorCharts.cshtml" />
+    <Content Include="Views\ROTank\_SensorCharts.cshtml" />
+    <Content Include="Views\ROTank\Index.cshtml" />
+    <Content Include="Views\Shared\_SelectTank.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
