--- a/EALFramework/EALFramework.csproj
+++ b/EALFramework/EALFramework.csproj
@@ -48,15 +48,18 @@
     <Compile Include="Controllers\WaterSensorController.cs" />
     <Compile Include="Models\AquaControllerCmd.cs" />
     <Compile Include="Models\NameValue.cs" />
+    <Compile Include="Models\PHSettings.cs" />
     <Compile Include="Models\SensorValLogBag.cs" />
     <Compile Include="Models\SensorValLog.cs" />
     <Compile Include="Models\RunData.cs" />
     <Compile Include="Models\TDSLog.cs" />
     <Compile Include="Models\PHLog.cs" />
+    <Compile Include="Models\TDSSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\FileIO.cs" />
     <Compile Include="Utils\Globals.cs" />
     <Compile Include="Utils\Helpers.cs" />
+    <Compile Include="Utils\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
